--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -60,7 +60,7 @@
 
                 <HorizontalScrollView
                     android:id="@+id/scroll_for_difficulty_chips"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toTopOf="@id/line2"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -176,6 +176,20 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/creators_and_licenses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/hint_bottom_margin"
+            android:gravity="top|center_horizontal"
+            android:text="@string/creators_and_licenses"
+            android:textSize="@dimen/creators_and_licenses_text_size"
+            app:layout_constraintTop_toBottomOf="@id/root_cardview"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="1"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
