--- a/app/src/main/res/values-h600dp/dimens.xml
+++ b/app/src/main/res/values-h600dp/dimens.xml
@@ -6,6 +6,8 @@
 
     <dimen name="button_pudding">6dp</dimen>
 
+    <dimen name="creators_licenses_content_height">370dp</dimen>
+
     <dimen name="content_loading_progress_size">50dp</dimen>
 
     <dimen name="question_height">170dp</dimen>
