--- a/app/src/main/res/values-h640dp/dimens.xml
+++ b/app/src/main/res/values-h640dp/dimens.xml
@@ -6,6 +6,8 @@
 
     <dimen name="button_pudding">8dp</dimen>
 
+    <dimen name="creators_licenses_content_height">390dp</dimen>
+
     <dimen name="content_loading_progress_size">50dp</dimen>
 
     <dimen name="question_height">190dp</dimen>
