--- a/app/src/main/res/values-h680dp/dimens.xml
+++ b/app/src/main/res/values-h680dp/dimens.xml
@@ -6,6 +6,8 @@
 
     <dimen name="button_pudding">9dp</dimen>
 
+    <dimen name="creators_licenses_content_height">420dp</dimen>
+
     <dimen name="content_loading_progress_size">60dp</dimen>
 
     <dimen name="question_height">210dp</dimen>
