--- a/app/src/main/res/values-h720dp/dimens.xml
+++ b/app/src/main/res/values-h720dp/dimens.xml
@@ -6,6 +6,8 @@
 
     <dimen name="button_pudding">10dp</dimen>
 
+    <dimen name="creators_licenses_content_height">450dp</dimen>
+
     <dimen name="content_loading_progress_size">60dp</dimen>
 
     <dimen name="question_height">220dp</dimen>
