--- a/app/src/main/res/values-h800dp/dimens.xml
+++ b/app/src/main/res/values-h800dp/dimens.xml
@@ -6,6 +6,8 @@
 
     <dimen name="button_pudding">11dp</dimen>
 
+    <dimen name="creators_licenses_content_height">510dp</dimen>
+
     <dimen name="content_loading_progress_size">70dp</dimen>
 
     <dimen name="question_height">270dp</dimen>
