--- a/app/src/main/res/values-h840dp/dimens.xml
+++ b/app/src/main/res/values-h840dp/dimens.xml
@@ -6,6 +6,8 @@
 
     <dimen name="button_pudding">11dp</dimen>
 
+    <dimen name="creators_licenses_content_height">540dp</dimen>
+
     <dimen name="content_loading_progress_size">80dp</dimen>
 
     <dimen name="question_height">290dp</dimen>
