--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,9 @@
     <dimen name="setting_chip_text_size">16sp</dimen>
     <dimen name="settings_item_bottom_margin">12dp</dimen>
     <dimen name="reset_passed_questions_hint_text_size">16sp</dimen>
+    <dimen name="creators_and_licenses_text_size">15sp</dimen>
+
+    <dimen name="creators_licenses_content_height">330dp</dimen>
 
     <dimen name="dialog_padding">14dp</dimen>
     <dimen name="dialog_title_text_size">18sp</dimen>
@@ -74,5 +77,4 @@
 
     <dimen name="congratulation_text_size">21sp</dimen>
     <dimen name="congratulation_image_padding_horizontal">10dp</dimen>
-
 </resources>
