--- a/app/src/main/res/layout/dialog_reset_passed_questions_confirmation.xml
+++ b/app/src/main/res/layout/dialog_reset_passed_questions_confirmation.xml
@@ -18,9 +18,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/confirmation"
+            android:textColor="@color/text_color"
             android:textSize="@dimen/dialog_title_text_size"
             android:textStyle="bold"
-            android:textColor="@color/text_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,32 +46,32 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dialog_element_top_margin"
         android:gravity="center"
-        android:textColor="@color/text_color"
         android:text="@string/reset_confirmation_question"
         android:textAlignment="center"
+        android:textColor="@color/text_color"
         android:textSize="@dimen/hint_text_size" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/reset_progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:indeterminate="true"
         android:layout_marginTop="@dimen/dialog_element_top_margin"
-        android:visibility="gone"
-        android:progressTint="@color/progress_color" />
+        android:indeterminate="true"
+        android:progressTint="@color/progress_color"
+        android:visibility="gone" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/submit_btn"
-        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dialog_submit_btn_top_margin"
         android:backgroundTint="@color/white"
         android:elevation="@dimen/button_elevation"
         android:padding="@dimen/button_pudding"
-        android:layout_marginTop="@dimen/dialog_submit_btn_top_margin"
         android:stateListAnimator="@null"
         android:text="@string/confirm"
         android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/black"
         android:textSize="@dimen/button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
